Fix instance state filter menu on firefox browser

--- a/src/ui/app/instances/ek-instance-state-selector/ek-instance-state-selector.less
+++ b/src/ui/app/instances/ek-instance-state-selector/ek-instance-state-selector.less
@@ -1,43 +1,46 @@
 @import "../../colors";
 
 .ek-instance-state-selector {
-
-    &__state, &__substate {
+    &__container {
         width: 100%;
-        height: 30px;
-        cursor: pointer;
-        position: relative;
-        padding: 0 30px;
 
-        &__name {
-            text-transform: capitalize;
-        }
-        &__counter {
-            font-size: 11px;
-            color: @grey600;
-            font-weight: normal;
-        }
+        &__state, &__substate {
+            width: 100%;
+            height: 30px;
+            cursor: pointer;
+            position: relative;
+            padding: 0 30px;
 
-        &:hover {
-            background: @grey100;
-        }
-        &--selected {
-            color: @cyan500;
-            font-weight: bold;
+            &__name {
+                width: 100%;
+                text-transform: capitalize;
+            }
+            &__counter {
+                font-size: 11px;
+                color: @grey600;
+                font-weight: normal;
+            }
 
-            &:before {
-                content: ' ';
-                position: absolute;
-                left: 0;
-                top: 3px;
-                height: 24px;
-                width: 4px;
-                background-color: @cyan400;
+            &:hover {
+                background: @grey100;
+            }
+            &--selected {
+                color: @cyan500;
+                font-weight: bold;
+
+                &:before {
+                    position: absolute;
+                    left: 0;
+                    top: 3px;
+                    height: 24px;
+                    width: 4px;
+                    background-color: @cyan400;
+                }
             }
         }
-    }
 
-    &__substate {
-        padding-left: 45px;
+        &__substate {
+            padding-left: 45px;
+        }
     }
 }
